modify insurance pool, start test signature

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
               >insurancePool address</small
             >
           </div>
-          <button type="button" class="btn btn-primary btn-mint">
+          <button type="button" class="btn btn-primary btn-passminter">
             press to pass minter role
           </button>
         </form>
